# MovieDB

./: CMakeLists.txt  Cache.cpp  Classes.cpp  Client.cpp  Client_printless.cpp  Client_printless.h  Movies.cpp  Phase1_report.docx  README.md  Server.cpp  Server_Temp.cpp  main.cpp  movies1.sql  mul_client.sh  opencv_install_script.sh  runMultipleClients.cpp  test.cpp
